<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/splashFragment">

    <!-- Splash Screen -->
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.trafficfinesystem.ui.screens.SplashFragment"
        android:label="@string/app_name" />

    <!-- Auth Screens -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.trafficfinesystem.ui.screens.auth.LoginFragment"
        android:label="@string/login" />
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.trafficfinesystem.ui.screens.auth.SignupFragment"
        android:label="@string/signup" />
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.trafficfinesystem.ui.screens.auth.ForgotPasswordFragment"
        android:label="@string/forgot_password" />
    <fragment
        android:id="@+id/resetPasswordFragment"
        android:name="com.trafficfinesystem.ui.screens.auth.ResetPasswordFragment"
        android:label="@string/reset_password" />

    <!-- Main Screens with Bottom Navigation -->
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.trafficfinesystem.ui.screens.dashboard.DashboardFragment"
        android:label="@string/dashboard" />
    <fragment
        android:id="@+id/finesFragment"
        android:name="com.trafficfinesystem.ui.screens.fines.FinesFragment"
        android:label="@string/fines" />
    <fragment
        android:id="@+id/fineDetailFragment"
        android:name="com.trafficfinesystem.ui.screens.fines.FineDetailFragment"
        android:label="@string/fine_id" />
    <fragment
        android:id="@+id/searchFinesFragment"
        android:name="com.trafficfinesystem.ui.screens.fines.SearchFinesFragment"
        android:label="@string/fines" />

    <fragment
        android:id="@+id/paymentsFragment"
        android:name="com.trafficfinesystem.ui.screens.payments.PaymentsFragment"
        android:label="@string/payments" />
    <fragment
        android:id="@+id/paymentHistoryFragment"
        android:name="com.trafficfinesystem.ui.screens.payments.PaymentHistoryFragment"
        android:label="@string/payment_history" />
    <fragment
        android:id="@+id/paymentMethodsFragment"
        android:name="com.trafficfinesystem.ui.screens.payments.PaymentMethodsFragment"
        android:label="@string/payment_method" />
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.trafficfinesystem.ui.screens.payments.CheckoutFragment"
        android:label="@string/pay_now" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.trafficfinesystem.ui.screens.profile.ProfileFragment"
        android:label="@string/profile" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.trafficfinesystem.ui.screens.profile.EditProfileFragment"
        android:label="@string/edit_profile" />
</navigation>
